update aboutPage and alignment issues

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,21 +1,91 @@
 .row {
-  width: 100%;
-  height: 100%;
   display: inline-flex;
-  justify-content: left;
-  align-items: left;
+  justify-content: center;
+  width: 80%;
+  height: 100%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .col-75 {
   width: 75%;
   /* display: block; */
-  align-self: center;
+  align-self: left;
   text-align: left;
   display: block;
 }
 .col-25 {
   width: 25%;
+  display: inline-flex;
   /* display: block; */
 }
 .block {
   display: block;
+}
+.container {
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.section2Image {
+  margin: 20%;
+  width: 60%;
+  height: 60%;
+  border-radius: 12px;
+  size-adjust: inherit;
+}
+
+.sectionBreak {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.section2ImageDiv {
+  width: 100%;
+  height: 70%;
+  /* display: inline-block; */
+}
+.section2text {
+  height: 100%;
+  width: 100%;
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 3vw;
+  line-height: 100%;
+  text-align: center;
+  margin-top: 0;
+}
+.align-content-center {
+  height: 20%;
+  width: 100%;
+}
+
+.col-1-4 {
+  width: 25%;
+  height: fit-content;
+}
+.margin-left-0 {
+  margin-left: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+.text-left {
+  text-align: left;
+}
+.fullsize {
+  width: 150%;
+  height: 100%;
+  /* margin: 0; */
+}
+.section-title {
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+.about-image {
+  width: 100%;
+  height: 45%;
+  align-self: center;
 }
