--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,8 +1,10 @@
 .row {
-  width: 100%;
+  width: 90%;
   height: 100%;
   justify-content: center;
   align-items: center;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .col-hf2 {
@@ -17,4 +19,9 @@
   height: 100%; */
   justify-self: center;
   width: 60%;
+}
+
+.textContent {
+  font-family: sans-serif;
+  font-size: 17px;
 }
